<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="new_crime">New Crime</string>
    <string name="crime_number_0">Crime number 0</string>
    <string name="title">Title:</string>
    <string name="enter_a_title_for_the_crime">Enter a title for the crime</string>
    <string name="description">Description:</string>
    <string name="enter_a_description_for_the_crime">Enter a description for the crime</string>
    <string name="details">Details</string>
    <string name="choose_date">Choose date</string>
    <string name="is_solved">Is solved</string>
    <string name="apply">Apply</string>
</resources>