<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="25sp"
            android:gravity="center|start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/StyleForEditViews"/>

        <EditText
            android:id="@+id/title_edit_text"
            style="@style/StyleForEditViews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_a_title_for_the_crime"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"
            android:singleLine="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text_view" />

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="25sp"
            style="@style/StyleForEditViews"
            android:text="@string/description"/>

        <EditText
            android:id="@+id/description_edit_text"
            style="@style/StyleForEditViews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_a_description_for_the_crime"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_text_view" />

        <TextView
            android:id="@+id/detail_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/StyleForEditViews"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/details"
            app:layout_constraintTop_toBottomOf="@id/description_edit_text"/>

        <Button
            android:id="@+id/choose_date_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_text_view"
            android:text="@string/choose_date"
            android:textAllCaps="false"
            style="@style/StyleForEditViews"
            />

        <CheckBox
            android:id="@+id/is_solved_check_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choose_date_button"
            android:text="@string/is_solved"
            style="@style/StyleForEditViews"
            />

        <Button
            android:id="@+id/apply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/is_solved_check_box"
            app:layout_constraintVertical_bias="0.25" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>